--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   <!-- About You -->
   <main>
     <section class="about">
-      <p>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis,
-        at posuere turpis adipiscing. Quisque sit amet dui dui
+      <p> Something authentic and original for this project that is simply a test for learning GIT and github.
       </p>
     </section>
     <!-- Your Projects -->
